1.2.0 ( rXXXX )
---------------

(Has the tests that work with Groovy 1.6 and fail with Groovy 1.5.)

Introduce the GantBinding class to ensure various things that are needed for Gant to work and to allow more
efficient cloning for multi-threading builds.

Remove the inserting of the class name for target set classes into the binding.

Make the symbols added to the binding by the tools lowercase rather than upper case.  cf. GANT-29.

The Maven target set used to provide access to properties via the symbol Maven, this has been changed to
maven.  This change is to make things consistent with the above change of case of tool symbols. All uses of
Maven as a reference from the binding must be replaced by maven.

Add in checks for duplicate symbols in the binding.

Change --cachedir option to short form -C so that -d can be used for --debug.

Updated Maven Ant Tasks to 2.0.9.

Added the ability to specify remote repositories in the Maven Target set.

Move to Java 1.5 for the Gant source: introduce generics and remove casts wherever sensible.


1.1.3 ( rXXXX )
---------------



1.1.2 ( r9087 )
---------------

Updated to using Ivy 2.0.0-beta2.

Corrected the bug that the Ivy tool was not operating in the correct namespace.  This removes the spurious
message: "Trying to override old definition of task buildnumber" that used to happen.

Refactored the IncludeTarget and IncludeTool classes to move replicated code into the common superclass
AbstractTool.

Corrected the way that jars are included on the classpath from ~/.gant/lib, ~/.ant/lib and $ANT_HOME/lib.

Updated TestNG from 5.7 to 5.8 in Maven target set. Amended the properties set so that the TestNG version
number and and classifier can be set by the user instead of being only hardwired.  The defaults are still
hardwired in an ugly way though.

Extended the Ivy tool to allow the path to the Ivy jar to be specified using the ** * notation.
