@@ -1,8 +1,6 @@
 1.2.0 ( rXXXX )
 ---------------
 
-(Has the tests that work with Groovy 1.6 and fail with Groovy 1.5.)
-
 Introduce the GantBinding class to ensure various things that are needed for Gant to work and to allow more
 efficient cloning for multi-threading builds.
 
@@ -23,6 +21,12 @@ Updated Maven Ant Tasks to 2.0.9.
 Added the ability to specify remote repositories in the Maven Target set.
 
 Move to Java 1.5 for the Gant source: introduce generics and remove casts wherever sensible.
+
+Ensure numeric return values from targets are promulgated to the exit code for the Gant target processing.
+
+Swap to using negative numbers for error codes generated by Gant itself, leaving positive return codes for
+Gant scripts to use.
+
 
 
 1.1.3 ( rXXXX )
